--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ blockquote {
 }
 
 body {
-  background: #f2f0eb url(assets/bg.png);
+  background: url(assets/bg.png);
   font: 16px Helvetica, Arial, Sans-Serif;
   color: #636363;
   line-height: 24px;
@@ -166,17 +166,7 @@ ul#nav li a:hover {
   padding: 5px 20px 0px 20px;
   margin: 0 0 20px 0;
   background: #73767c;
-  background: -moz-linear-gradient(top, #606268 0%, #73767c 20%); /* firefox */
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #606268),
-    color-stop(20%, #73767c)
-  ); /* webkit */
   border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
   font-family: sans-serif;
   font-size: 16px;
   color: #f2f2f2;
@@ -197,17 +187,7 @@ input:-moz-placeholder {
   padding: 12px 20px 0px 20px;
   margin: 0 0 20px 0;
   background: #73767c;
-  background: -moz-linear-gradient(top, #606268 0%, #73767c 20%); /* firefox */
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #606268),
-    color-stop(20%, #73767c)
-  ); /* webkit */
   border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
   font-family: sans-serif;
   font-size: 16px;
   color: #f2f2f2;
@@ -225,14 +205,6 @@ input:-moz-placeholder {
 #content #contact input:focus,
 #content #contact textarea:focus {
   background: #606268;
-  background: -moz-linear-gradient(top, #46474c 0%, #606268 20%);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #46474c),
-    color-stop(20%, #606268)
-  );
 }
 
 #content #contact input[type="submit"] {
@@ -241,14 +213,6 @@ input:-moz-placeholder {
   float: right;
   padding: 10px 15px;
   border: 1px solid #52555c;
-  background: -moz-linear-gradient(top, #73767c 0%, #5c5f63 100%);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #73767c),
-    color-stop(100%, #415d79)
-  );
   cursor: pointer;
 }
 #content #social {
@@ -262,7 +226,6 @@ body {
 
 .social-container {
   width: 400px;
-  /* margin: 40vh auto; */
   text-align: center;
 }
 
@@ -311,9 +274,6 @@ body {
     &:hover i {
       @include transformScale(2.2);
       color: $iconColor;
-      background: -webkit-linear-gradient(45deg, $iconColor, $accent);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
       transition: all $timing ease-in;
     }
   }
@@ -331,18 +291,6 @@ body {
   width: 100px;
   padding: 5px 0 5px 45px;
   background: url(assets/social-media-icons.png) no-repeat;
-}
-#content #social ul li a.linkedin {
-  background-position: 0 -3px;
-}
-#content #social ul li a.instagram {
-  background-position: -172px -1px;
-}
-#content #social ul li a.facebook {
-  background-position: -172px -136px;
-}
-#content #social ul li a.twitter {
-  background-position: 0 -71px;
 }
 
 input:focus,
@@ -364,17 +312,7 @@ input[type="submit"] {
   float: right;
   padding: 10px 15px;
   margin: 0 15px 0 0;
-  -moz-box-shadow: 0px 0px 5px #999;
-  -webkit-box-shadow: 0px 0px 5px #999;
   border: 1px solid #556f8c;
-  background: -moz-linear-gradient(top, #718da9 0%, #415d79 100%); /* firefox */
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0%, #718da9),
-    color-stop(100%, #415d79)
-  ); /* webkit */
   cursor: pointer;
 }
 
